[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/Tile_TestCreation.tres" type="TileSet" id=2]
[ext_resource path="res://Misc/IterableSwapper/IterableSwapper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Misc/DebugShapeDrawer/DebugShapeDrawer.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/GameGui/GameGui.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI/ControlInterface/ControlInterface.tscn" type="PackedScene" id=7]
[ext_resource path="res://GUI/FadeScreen/FadeScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://GUI/PauseMenu/PauseMenuMain.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1504, 720 )

[node name="Level" type="Node"]
script = ExtResource( 1 )
CAMERA_LIMIT_RIGHT = 1504
CAMERA_LIMIT_BOTTOM = 720

[node name="TileMap" type="TileMap" parent="." groups=[
"Tile",
]]
light_mask = 0
z_as_relative = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
collision_friction = 0.0
collision_mask = 6
occluder_light_mask = 0
format = 1

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Iterable" type="Node2D" parent="."]
z_index = 999
z_as_relative = false

[node name="IterableSwapper" parent="Iterable" instance=ExtResource( 3 )]

[node name="Player" parent="Iterable" instance=ExtResource( 4 )]
position = Vector2( 166.438, 80.0763 )
level_path = NodePath("../..")
game_gui_path = NodePath("../../GameGui")
tilemap_path = NodePath("../../TileMap")

[node name="PlatformerBehavior" parent="Iterable/Player" index="0"]
level_path = NodePath("../../..")

[node name="Camera2D" parent="Iterable/Player" index="3"]
limit_right = 1504
limit_bottom = 720

[node name="CameraLimitsDraw" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.498039 )
draw_enabled = true
sampling_shape = SubResource( 1 )
draw_color = Color( 0.992157, 1, 0, 1 )
filled = false
centered = false
draw_width = 3.0

[node name="GameGui" parent="." instance=ExtResource( 6 )]

[node name="ControlInterface" parent="." instance=ExtResource( 7 )]
pause_mode = 2

[node name="FadeScreen" parent="." instance=ExtResource( 8 )]

[node name="PauseMenuMain" parent="." instance=ExtResource( 9 )]
[connection signal="player_die" from="Iterable/Player" to="GameGui" method="_on_Player_player_die"]
[connection signal="timeout" from="Iterable/Player/TimescaleTimer" to="." method="_player_die"]
[connection signal="inventory_btn_pressed" from="GameGui" to="." method="_on_GameGui_inventory_btn_pressed"]
[connection signal="pause_btn_pressed" from="GameGui" to="." method="_on_GameGui_pause_btn_pressed"]
[connection signal="fading_finished" from="FadeScreen" to="GameGui" method="_on_FadeScreen_fading_finished"]
[connection signal="fading_started" from="FadeScreen" to="GameGui" method="_on_FadeScreen_fading_started"]
[connection signal="pause_menu_closed" from="PauseMenuMain" to="." method="_on_PauseMenuMain_pause_menu_closed"]
[connection signal="resume_btn_pressed" from="PauseMenuMain" to="." method="_on_PauseMenuMain_resume_btn_pressed"]

[editable path="Iterable/Player"]
